.container div added, general page structure

--- a/index.html
+++ b/index.html
@@ -11,77 +11,78 @@
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
+	<div class="container">
+		<nav>
+			<div class="responsive-menu-button">
+				<p>
+					<i class="fa fa-bars"></i> TOGGLE MENU
+				</p>
+			</div>
 
-	<nav>
-		<div class="responsive-menu-button">
-			<p>
-				<i class="fa fa-bars"></i> TOGGLE MENU
-			</p>
-		</div>
-
-		<ul class="nav-menu">
-			<li>
-				<a href="">
-					HOME
-				</a>
-			</li>
-			<li>
-				<a href="">
-					NEWS
-				</a>
-			</li>
-			<li>
-				<a href="#"> 
-					CLUB
-				</a>
-				<ul class="submenu">
-					<li>
-						<a href="#">
-							HISTORY
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							STADIUM
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							THE CLUB & THE CITY	
-						</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="#"> 
-					LEAGUE
-				</a>
-				<ul class="submenu">
-					<li>
-						<a href="#">
-							FIXTURES & RESULTS
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							SCHEDULE
-						</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="">
-					TICKETS
-				</a>
-			</li>
-			<li>
-				<a href="">
-					CONTACT
-				</a>
-			</li>
-			
-		</ul>
-	</nav>
-	
+			<ul class="nav-menu">
+				<li>
+					<a href="">
+						HOME
+					</a>
+				</li>
+				<li>
+					<a href="">
+						NEWS
+					</a>
+				</li>
+				<li>
+					<a href="#"> 
+						CLUB
+					</a>
+					<ul class="submenu">
+						<li>
+							<a href="#">
+								HISTORY
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								STADIUM
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								THE CLUB & THE CITY	
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#"> 
+						LEAGUE
+					</a>
+					<ul class="submenu">
+						<li>
+							<a href="#">
+								FIXTURES & RESULTS
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								SCHEDULE
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="">
+						TICKETS
+					</a>
+				</li>
+				<li>
+					<a href="">
+						CONTACT
+					</a>
+				</li>
+				
+			</ul>
+		</nav>
+		
+	</div>
 </body>
 </html>
