--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>
 		Responsive HTML5 + CSS3 (and some JS)  nav bar.
 	</title>
-
+	
 	<link rel="stylesheet" href="./css/font-awesome.min.css">
 
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
@@ -14,9 +14,10 @@
 	<div class="container">
 		<nav>
 			<div class="responsive-menu-button">
-				<p>
-					<i class="fa fa-bars"></i> TOGGLE MENU
-				</p>
+				<p class="responsive-menu-icon">
+					<i class="fa fa-bars"></i>		
+				</p>	
+				
 			</div>
 
 			<ul class="nav-menu">
@@ -82,7 +83,93 @@
 				
 			</ul>
 		</nav>
+
+		<main>
+			<section>
+				<article>
+					<h1>
+						Lorem Ipsum
+					</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis semper justo non euismod. Maecenas vel blandit orci. Nullam et ornare ligula. Vestibulum commodo, nisi quis elementum vestibulum, odio metus convallis ligula, vel aliquet lectus lorem at risus. In suscipit tortor dignissim justo semper eleifend. Morbi porttitor, ipsum vitae tincidunt ornare, orci ligula scelerisque urna, et pulvinar magna arcu ut magna. Vestibulum vel felis facilisis, cursus nibh sit amet, rutrum sem. Ut efficitur malesuada enim, quis fringilla nunc rutrum in. Ut pretium lacus sed dolor aliquet, quis varius justo volutpat. Curabitur viverra nibh eu lectus dictum accumsan. Integer finibus, lectus in sollicitudin dapibus, massa quam porta est, nec ornare quam libero ac dui. Curabitur ultricies dignissim dui, at efficitur nibh dictum ac. Sed viverra, tortor in sagittis pellentesque, nulla est aliquet risus, suscipit ornare mauris tortor et lorem. Praesent sed felis facilisis, varius leo id, tristique justo. Nulla hendrerit tristique dapibus. Vestibulum semper dictum nulla imperdiet facilisis.
+
+					</p>
+					<p>
+
+						Quisque feugiat, erat non imperdiet commodo, nibh nibh ullamcorper quam, vel faucibus libero purus a enim. Vivamus facilisis imperdiet nunc ut pulvinar. Pellentesque vitae vestibulum ex. Donec luctus, libero vitae laoreet rutrum, libero dolor suscipit urna, a tincidunt nibh est a ipsum. Donec eu laoreet lectus. In eget posuere felis. Praesent a viverra nulla, congue tempus nisl. Integer ac metus nec arcu facilisis egestas vel quis nibh.
+					</p>
+					<p>
+						Duis non laoreet sapien. Fusce at ex a neque gravida malesuada vitae non velit. Morbi sit amet pharetra metus, eu ultricies massa. Nullam id varius nunc. Maecenas lacinia accumsan ante ut hendrerit. Sed risus nunc, porta non mi a, convallis malesuada nisi. Nullam id rutrum massa, sit amet aliquet leo. Integer non auctor justo, et mollis nibh. Vestibulum facilisis eget odio sit amet aliquet. Etiam non mattis neque. Sed neque est, maximus et pulvinar porta, ultricies id dolor.
+					</p>
+
+					<p>
+
+						In hac habitasse platea dictumst. Nullam ut purus egestas, varius magna et, auctor leo. Pellentesque auctor odio a nulla dictum porta. Nam egestas, purus in feugiat fringilla, lorem odio tincidunt nibh, porttitor accumsan massa ante sit amet neque. Praesent auctor felis eu egestas dapibus. Etiam laoreet ex in laoreet viverra. Sed in lectus eu nulla hendrerit bibendum eget ut lacus. Suspendisse cursus, magna a pulvinar accumsan, elit dolor pulvinar leo, nec bibendum sapien nisl ac massa. Nunc iaculis ac turpis sit amet dictum. Nam faucibus vehicula tincidunt. Praesent massa quam, aliquam eu lacus eget, pulvinar rhoncus lacus. Vivamus ultricies iaculis odio, eu lobortis purus. Mauris feugiat tortor a vestibulum venenatis.
+					</p>
+
+					<p>
+
+						Integer risus enim, cursus vitae posuere in, placerat sit amet dolor. Nunc quis ante sapien. Ut tristique est suscipit varius commodo. Praesent mattis ipsum et magna maximus fringilla. Praesent auctor magna id urna consequat venenatis. Proin vel pharetra sapien. Maecenas ligula mi, cursus ut aliquam at, interdum in purus. In rutrum non purus pretium vehicula. Suspendisse ut elementum neque. In accumsan sem sed dui imperdiet varius. In hac habitasse platea dictumst. In quis quam eu mauris posuere viverra.
+					</p>
+					<p>
+						Cras quam mauris, maximus in velit vel, laoreet auctor arcu. Pellentesque venenatis, mauris in pellentesque cursus, justo urna egestas nisi, accumsan tempus purus augue vitae lorem. Mauris iaculis nunc urna, sed eleifend libero convallis quis. Duis fringilla ante sapien, et porta turpis viverra sed. Morbi in molestie lacus, tempus egestas libero. Vivamus tristique lectus ac dui blandit tristique in aliquet neque. Sed varius dolor eget ligula ullamcorper porttitor. Duis ultricies, lectus vitae imperdiet dictum, risus ex pretium arcu, non porttitor lacus tellus id magna. Vestibulum egestas commodo quam vel egestas. Proin facilisis nulla vel odio rutrum efficitur. Suspendisse nec urna quis ex ultrices condimentum vel interdum risus.
+					</p>
+					<p>
+						Phasellus scelerisque a velit quis elementum. Proin ut dolor imperdiet, sagittis lacus suscipit, sagittis mauris. Nulla facilisis rhoncus imperdiet. Sed molestie ex in enim porttitor, vel sodales arcu aliquam. Vivamus sagittis hendrerit risus, ut egestas magna posuere mattis. Mauris magna lorem, luctus eget rhoncus eget, mollis ut elit. Ut id lectus urna. Morbi posuere lectus eu dui suscipit rutrum. Proin aliquet viverra risus, eu semper orci interdum eget. Nunc rhoncus diam purus, id tempus ligula consequat eget.
+					</p>
+
+					<p>
+						Suspendisse consequat libero quis venenatis condimentum. Aliquam elementum eu magna in interdum. Phasellus quis tempus erat. Duis sodales faucibus ante sit amet convallis. Donec non placerat nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque erat dolor, vestibulum vitae felis quis, lobortis ornare justo. Sed pharetra rutrum nulla, et porta mauris vehicula eu. Maecenas fringilla erat sit amet velit sollicitudin dictum. Sed pellentesque libero ut ex laoreet, nec venenatis dolor pharetra.
+					</p>
+
+					<p>
+						Nunc consectetur tempus magna, quis sagittis nisl viverra eget. Nullam eget erat sit amet enim posuere vehicula. Etiam vel leo mattis ligula pulvinar vulputate vel at ipsum. Pellentesque id nisl nibh. Nulla porta facilisis magna mattis suscipit. Vestibulum a suscipit dui, ut mattis ipsum. Nam pharetra lacus risus, ac malesuada mi tincidunt ac.
+					</p>
+
+					<p>
+						Aliquam dignissim mauris mi, nec vehicula felis accumsan quis. Sed dictum tincidunt libero, non tincidunt ante interdum vitae. Suspendisse tincidunt, eros eu aliquet finibus, dolor turpis iaculis urna, vitae vestibulum ante nisi in quam. Curabitur ut lorem id urna ultrices dapibus. Fusce laoreet sapien urna, et faucibus diam placerat vitae. Nulla tempus leo et dolor commodo, sit amet venenatis magna suscipit. Sed aliquet ac dui sit amet elementum. Fusce a nibh at justo ullamcorper mollis sit amet nec magna. Suspendisse non rhoncus ligula. Maecenas eu placerat ex. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In eget pellentesque neque. In a orci purus. Vivamus fermentum lobortis orci id vulputate. Suspendisse ornare sit amet felis eu rhoncus.
+					</p>
+					<p>
+						Nam viverra in arcu eu facilisis. Maecenas accumsan diam vel nisl accumsan, vitae gravida ante pulvinar. Nulla at tellus et diam luctus ultricies ac ac quam. Pellentesque porta, mi id commodo venenatis, arcu sapien consectetur lectus, vel porta est magna id elit. Integer fringilla lorem ut elit efficitur dictum. Nam lacus augue, ultrices id interdum quis, mollis vitae tellus. Aliquam sed ex magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque iaculis euismod condimentum. Nunc et laoreet justo. Suspendisse commodo libero nisi, quis hendrerit sem pellentesque at.
+					</p>
+
+					<p>
+						Aliquam tincidunt, nunc ac elementum pretium, nisl velit blandit nulla, in sagittis augue leo ac erat. Donec elit nisl, congue sed nulla ut, mollis ullamcorper dui. Ut odio ante, ultrices nec nisi sed, porttitor ornare metus. Sed magna lectus, porttitor ut leo nec, dapibus placerat augue. Vestibulum vulputate et nisl eu luctus. Mauris eu pretium ligula, in condimentum nisl. Nunc congue elit nec magna euismod, facilisis sollicitudin velit tincidunt. Fusce non venenatis ligula. Donec id euismod neque, at vehicula metus. Integer ultrices dolor nulla, nec condimentum mauris sagittis vel.
+					</p>
+
+					<p>
+
+						Curabitur eleifend rhoncus libero a gravida. Aenean in eros porta, lacinia ligula et, convallis quam. Proin ornare elementum feugiat. Aenean viverra lectus nisl, quis mattis tortor tristique a. Mauris malesuada posuere convallis. In nulla neque, dignissim et suscipit ut, pharetra non sapien. Proin eu congue lacus. Praesent a tempus libero, eget euismod mauris. Ut rhoncus sit amet est et feugiat. Sed eleifend ornare neque, sed tincidunt elit vehicula in. Pellentesque ut ligula neque. In risus dui, eleifend at lectus vel, facilisis auctor nulla. Suspendisse suscipit nulla quis est mattis, ut dictum diam porta. Mauris scelerisque nibh quis enim rutrum consequat. Sed mollis orci nunc, in dapibus sem sodales vel. Fusce eget velit at eros fermentum mollis eu eget turpis.
+					</p>
+
+					<p>
+						Proin et finibus mi, eu porttitor felis. Suspendisse sagittis, lorem sed faucibus luctus, lectus nisl congue lorem, et laoreet diam tortor eget velit. Mauris id auctor lectus, tristique finibus elit. Maecenas dictum id enim non accumsan. Curabitur elit tortor, iaculis sit amet mi id, tincidunt sodales leo. Nunc ac purus in massa facilisis vestibulum non ut nunc. Fusce placerat sed urna sit amet varius. Vivamus aliquam nisi sit amet risus pellentesque, eu ultricies erat consectetur. Phasellus tempus lacinia arcu, quis tempus metus tempor in. Curabitur eu imperdiet odio. Aliquam auctor finibus justo eget malesuada. Nulla commodo, ligula non vulputate lobortis, turpis purus blandit nibh, sit amet sollicitudin odio odio sit amet ante.
+					</p>
+
+					<p>
+
+						Pellentesque vestibulum, mauris quis tempus semper, neque neque iaculis nisl, at mattis nisi quam quis libero. Aliquam hendrerit mauris eros, id viverra libero finibus id. Aenean sit amet eros at arcu aliquet laoreet. Fusce ultrices congue laoreet. Nullam et sollicitudin tortor. Etiam magna nisi, pellentesque et libero eu, interdum consectetur lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque consectetur lacus quam, sed gravida nibh suscipit in. Praesent diam nisi, consectetur eu sollicitudin id, accumsan at lorem. Quisque luctus fringilla metus, eget ultrices nisl venenatis venenatis. Aenean quis vestibulum magna. Nam porttitor, nunc eu lacinia rhoncus, sem ex consequat odio, ut eleifend ipsum sapien fringilla arcu.
+					</p>
+				</article>
+			</section>
+		</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		
 	</div>
+
+	<script src="./js/menu.js" ></script>
 </body>
 </html>
