--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 			<div class="responsive-menu-button">
 				<p class="responsive-menu-icon">
 					<i class="fa fa-bars"></i>		
-				</p>	
-				
+				</p>			
 			</div>
 
 			<ul class="nav-menu">
@@ -32,7 +31,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#"> 
+					<a href="#" class="submenu-button"> 
 						CLUB
 					</a>
 					<ul class="submenu">
@@ -54,7 +53,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#"> 
+					<a href="#" class="submenu-button"> 
 						LEAGUE
 					</a>
 					<ul class="submenu">
